# audiogpt

./: README.md  pyproject.toml  run.sh  run_audio.sh
Copy of preprocess/: convert_data.py
config/: config.json  configs.py
data/: AudioDatacollector.py  AudioDataset.py  utils.py
inference/: ans.txt  inference.py
inference/spec_lis/: 5290-26685-0000.spec.pt  vo_ABDLQ001_1_paimon_01.spec.pt  vo_ABDLQ001_1_paimon_02.spec.pt  vo_ABDLQ001_1_paimon_04.spec.pt  vo_ABDLQ001_1_paimon_10.spec.pt  vo_ABDLQ002_1_paimon_04.spec.pt
model/: AudioEncoder.py  Audiogpt.py  AudiogptBase.py  audio_decoder.py  utils.py
model/text/: chinese_bert.py
preprocess/: convert_data.py  data_count.py  merage_data.py  show_data.py
train/: train.py  trainer.py
